# c-SSTAR

./: .gitignore  MANIFEST.in  README.md  c-SSTAR  c-SSTAR.py  pyproject.toml  setup.py  summarize_c-SSTAR.sh
.github/workflows/: ci-actions-test.yml
csstar/: VERSION  __init__.py  __main__.py  evaluate_alignment.py  file_content.py  file_convert.py  parse_arguments.py  utilities_file.py  utilities_system.py
scripts/: summarize_c-SSTAR.sh
tests/: test_decompress_input_file.py  test_fasta_nucleotide_input.py  test_protein_input.py
tests/data/: CP019908.1.blastn.tsv  SRR3112344.expected-report.tsv
